--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Armand Adroher",
   "license": "ISC",
   "dependencies": {
+    "bower": "^1.8.4",
+    "psc-package-bin-simple": "^1.0.4",
+    "pulp": "^12.3.0",
     "purescript": "^0.12.0"
   }
 }
