--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "armandadroher.name web page",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "purs-install": "psc-package install",
+    "purs-build": "pulp --psc-package build",
+    "purs-test": "pulp --psc-package test",
+    "purs-run": "pulp --psc-package run",
+    "purs-server": "pulp --psc-package server"
   },
   "author": "Armand Adroher",
   "license": "ISC",
   "dependencies": {
-    "bower": "^1.8.4",
     "psc-package-bin-simple": "^1.0.4",
     "pulp": "^12.3.0",
     "purescript": "^0.12.0"
