--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "purs-clean": "rimraf output && rimraf .pulp-cache",
     "purs-install": "psc-package install",
-    "purs-build": "pulp --psc-package build --to public/app.js",
-    "purs-browserify": "pulp --psc-package browserify --to app.js --optimise",
+    "purs-build": "pulp --psc-package build",
+    "purs-browserify": "pulp --psc-package --watch browserify --optimise --to output/app.js",
     "purs-test": "pulp --psc-package test",
     "purs-run": "pulp --psc-package run",
     "purs-server": "pulp --psc-package server",
-    "dev": "npm run purs-server --watch",
+    "dev": "npm run purs-server",
     "pretest": "npm install && npm run purs-clean && npm run purs-install && npm run purs-build",
     "test": "npm run purs-test"
   },
