--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
+    "styled-components": "^4.1.2",
     "typescript": "3.2.1"
   },
   "scripts": {
@@ -26,5 +27,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.9.2"
+  }
 }
