--- a/package.json
+++ b/package.json
@@ -121,6 +121,9 @@
   "babel": {
     "presets": [
       "react-app"
+    ],
+    "plugins": [
+      "babel-plugin-styled-components"
     ]
   }
 }
