--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "16.7.13",
     "@types/react-dom": "16.0.11",
     "@types/styled-components": "^4.1.3",
+    "@types/tinycolor2": "^1.4.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
@@ -58,6 +59,7 @@
     "style-loader": "0.23.0",
     "styled-components": "^4.1.2",
     "terser-webpack-plugin": "1.1.0",
+    "tinycolor2": "^1.4.1",
     "typescript": "3.2.1",
     "url-loader": "1.1.1",
     "webpack": "4.19.1",
