--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "lib": ["dom", "es6"],
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "types": ["react", "jest"]
   },
   "include": ["src"]
 }
