--- a/package.json
+++ b/package.json
@@ -75,7 +75,9 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "lint": "eslint './src/*.ts' './src/**/*.ts' --fix"
+    "lint": "npm run lint:prettier && npm run lint:eslint",
+    "lint:prettier": "prettier --write '.src/**/*.ts' './src/**/*.tsx'",
+    "lint:eslint": "eslint './src/*.ts' './src/**/*.ts' './src/*.tsx' './src/**/*.tsx' --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -87,7 +89,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.10.6"
+    "babel-plugin-styled-components": "^1.10.6",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^1.19.1"
   },
   "jest": {
     "collectCoverageFrom": [
