--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "lib": ["dom", "es6"],
+    "lib": ["dom", "es2019"],
     "jsx": "preserve",
-    "types": ["react", "jest"]
+    "types": ["react", "jest"],
+    "downlevelIteration": true
   },
   "include": ["src"]
 }
