--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "fork-ts-checker-webpack-plugin-alt": "0.4.14",
         "fs-extra": "7.0.0",
         "gatsby": "^2.25.3",
+        "gatsby-plugin-styled-components": "^3.3.14",
         "html-webpack-plugin": "4.0.0-alpha.2",
         "identity-obj-proxy": "3.0.0",
         "jest": "^26.6.3",
